wip(activity-calendar) Limit user access rights by program location